feat: Implement Product Detail API and UI
- Added ProductDetailDto and WarehouseStockDto for detailed product information.
- Created GetProductByIdAsync method in ProductService to fetch product details.
- Implemented ProductsController endpoint for retrieving product details by ID.
- Developed ProductDetail component in the UI to display product information and warehouse stock.
- Added unit and integration tests for ProductService and ProductsController.
- Updated translations for product details in English and Spanish.
- Refactored existing code for improved structure and maintainability.

--- a/packages/mf-inventory/src/locales/en/translation.json
+++ b/packages/mf-inventory/src/locales/en/translation.json
@@ -59,5 +59,26 @@
       "totalItems": "Total Items",
       "totalValue": "Total Value"
     }
+  },
+  "common": {
+    "back": "Back"
+  },
+  "products": {
+    "details": "Product Details",
+    "warehouseStock": "Warehouse Stock",
+    "sku": "SKU",
+    "name": "Name",
+    "description": "Description",
+    "category": "Category",
+    "reorderPoint": "Reorder Point",
+    "totalStock": "Total Stock",
+    "unitPrice": "Unit Price",
+    "status": "Status",
+    "warehouseName": "Warehouse Name",
+    "quantity": "Quantity",
+    "stockValue": "Stock Value"
+  },
+  "error": {
+    "productNotFound": "Product not found"
   }
 }
